[package]
name = "codetime-zed"
version = "0.1.6"
edition = "2021"

[dependencies]
zed_extension_api = "0.7.0"

[lib]
name = "codetime_zed"
crate-type = ["cdylib"]

# `codetime-ls` is intentionally NOT a member here. The extension compiles to
# `wasm32-wasip1`, and the language server depends on tokio/reqwest/tower-lsp,
# which cannot build for wasm. Keeping it in its own workspace (see
# codetime-ls/Cargo.toml) ensures Zed's `cargo build --target wasm32-wasip1`
# never pulls it in.
[profile.release]
lto = "thin"
