[package]
name = "codetime-ls"
version.workspace = true
edition = "2021"
repository = "https://github.com/codetime-dev/codetime-zed"
description = "Language server that reports editing activity to the CodeTime API."

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "process", "rt-multi-thread"], default-features = false }
tower-lsp = "0.20"
url = "2"
